Create ÖMSQ-12 form skeleton

--- a/src/content/home.html
+++ b/src/content/home.html
@@ -6,9 +6,9 @@ description:
 {% extends 'base.html' %}
 {% block body %}
 {% include 'partials/header.html' %}
-<main>
-  <div class="squeeze12 centerx stack g5 p0">
-    <p>Coming soon.</p>
-  </div>
+<main class="[ centerx squeeze12 ] [ p0 ]"x>
+    <ul>
+      <li><a href="/orebro/">Örebro Musculoskeletal Screening Questionnaire<br>12-Item Short Form (ÖMSQ-12)</a></li>
+    </ul>
 </main>
 {% endblock %}
