Implement Spanish ÖMSQ-12 & integrate with Netlify

--- a/src/content/home.html
+++ b/src/content/home.html
@@ -1,14 +1,13 @@
 ---
-permalink: /
 title: Welcome to BEVAE
+permalink: /
 description:
+locale: en
 ---
 {% extends 'base.html' %}
 {% block body %}
 {% include 'partials/header.html' %}
 <main class="[ centerx squeeze12 ] [ p0 ]"x>
-    <ul>
-      <li><a href="/orebro/">Örebro Musculoskeletal Screening Questionnaire<br>12-Item Short Form (ÖMSQ-12)</a></li>
-    </ul>
+
 </main>
 {% endblock %}
