--- a/src/content/en/omsq.html
+++ b/src/content/en/omsq.html
@@ -1,28 +1,26 @@
 ---
-permalink: /orebro/
-title: Örebro MSQ
+title: ÖMSQ-12
 description:
 ---
 {% extends 'base.html' %}
 {% block body %}
-{% include 'partials/header.html' %}
-<main class="[ centerx flow1 squeeze11 stack g4 ] [ p0 ]">
+<main class="[ flow1 squeeze11 centerx stack g1 ] [ px0 py5 ]">
   <h1>ÖMSQ-12</h1>
-  <form class="stack g4 itemscenter [ px0 ]">
-    <div class="[ stack ] [ g0 ]">
-      <label data-hidden="true">
-        <input type="date"> Date
+  <form class="[ stack g3 itemscenter ] [ px0 ]">
+    <div class="stack g0">
+      <label data-hidden="true">Date<br>
+        <input type="date">
       </label>
-      <label>
-        <input type="text"> Full name
+      <label>Full name<br>
+        <input type="text">
       </label>
-      <label>
-        <input type="text"> Your problem
+      <label>Your problem<br>
+        <input type="text">
       </label>
     </div>
 
     <fieldset class="p3">
-      <legend class="fs1 fw700">Tell us about your pain or problem.</legend>
+      <legend>Tell us about your pain or problem.</legend>
       <ol class="stack g3">
         <li class="stack g-1">
           <p>How long ago did your current pain or problem start?</p>
@@ -40,7 +38,7 @@ description:
           </div>
         </li>
         <li class="stack g-1">
-          <p>Rate how much of a burden it is to perform all the things you need to do in a normal day. <em class="fs-1">0 = not at all, 10 = extremely</em></p>
+          <p>Rate how much of a burden it is to perform all the things you need to do in a normal day.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q2" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q2" type="radio" value="1">1</label>
@@ -56,7 +54,7 @@ description:
           </div>
         </li>
         <li class="stack g-1">
-          <p>For the last 2-3 days, rate on average how bothersome your pain or problem is. <em class="fs-1">0 = not at all, 10 = extremely</em></p>
+          <p>For the last 2-3 days, rate on average how bothersome your pain or problem is.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q3" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q3" type="radio" value="1">1</label>
@@ -72,7 +70,7 @@ description:
           </div>
         </li>
         <li class="stack g-1">
-          <p>For the last 2-3 days, what percentage of the day do you notice your pain or problem? <em class="fs-1">0 = never, 100 = all the time</em></p>
+          <p>For the last 2-3 days, what percentage of the day do you notice your pain or problem?<br><em class="fs-1">0 = never, 100 = all the time</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q4" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q4" type="radio" value="1">10</label>
@@ -95,10 +93,10 @@ description:
 
 
     <fieldset class="p3">
-      <legend class="fs1 fw700">We also need a bit more information on your thoughts and feelings.</legend>
+      <legend>We also need a bit more information on your thoughts and feelings.</legend>
       <ol class="stack g3" start="5">
         <li class="stack g-1">
-          <p>During the past 2-3 days, rate how tense or anxious you have felt. <em class="fs-1">0 = not at all, 10 = extremely</em></p>
+          <p>During the past 2-3 days, rate how tense or anxious you have felt.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q5" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q5" type="radio" value="1">1</label>
@@ -114,7 +112,7 @@ description:
           </div>
         </li>
         <li class="stack g-1">
-          <p>During the past 2-3 days, rate how "depressed" or "down" you have felt. <em class="fs-1">0 = not at all, 10 = extremely</em></p>
+          <p>During the past 2-3 days, rate how "depressed" or "down" you have felt.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q6" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q6" type="radio" value="1">1</label>
@@ -130,7 +128,7 @@ description:
           </div>
         </li>
         <li class="stack g-1">
-          <p>What do you think is the risk that your current pain or problem will <span style="text-decoration: underline;">not</span> improve? <em class="fs-1">0 = no risk, 10 = very large risk</em></p>
+          <p>What do you think is the risk that your current pain or problem will <span style="text-decoration: underline;">not</span> improve?<br><em class="fs-1">0 = no risk, 10 = very large risk</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q7" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q7" type="radio" value="1">1</label>
@@ -146,7 +144,7 @@ description:
           </div>
         </li>
         <li class="stack g-1">
-          <p>Think of your life. Rate how satisfied you are with your current situation. <em class="fs-1">0 = not at all, 10 = extremely</em></p>
+          <p>Think of your life. Rate how satisfied you are with your current situation.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q8" type="radio" value="10">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q8" type="radio" value="9">1</label>
@@ -169,10 +167,10 @@ description:
 
 
     <fieldset class="p3">
-      <legend class="fs1 fw700">How true are the next two statements for you?</legend>
+      <legend>How true are the next two statements for you?</legend>
       <ol class="stack g3" start="9">
         <li class="stack g-1">
-          <p>Physical activity makes my pain or problem worse. <em class="fs-1">0 = not at all, 10 = extremely</em></p>
+          <p>Physical activity makes my pain or problem worse.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q9" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q9" type="radio" value="1">1</label>
@@ -188,7 +186,7 @@ description:
           </div>
         </li>
         <li class="stack g-1">
-          <p>I should not do my normal daily routine or work with my present pain or problem. <em class="fs-1">0 = not at all, 10 = extremely</em></p>
+          <p>I should not do my normal daily routine or work with my present pain or problem.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q10" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q10" type="radio" value="1">1</label>
@@ -211,10 +209,10 @@ description:
 
 
     <fieldset class="p3">
-      <legend class="fs1 fw700">Help us to better understand your current physical abilities.</legend>
+      <legend>Help us to better understand your current physical abilities.</legend>
       <ol class="stack g3" start="11">
         <li class="stack g-1">
-          <p>I can walk for an hour or participate in my normal <span style="text-decoration: underline;">light</span> recreational or sporting activities <em class="fs-1">0 = not at all, 10 = completely normal</em></p>
+          <p>I can walk for an hour or participate in my normal <span style="text-decoration: underline;">light</span> recreational or sporting activities<br><em class="fs-1">0 = not at all, 10 = completely normal</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q11" type="radio" value="10">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q11" type="radio" value="9">1</label>
@@ -230,7 +228,7 @@ description:
           </div>
         </li>
         <li class="stack g-1">
-          <p>I manage my daily routine and social activities (shopping, transportation, seeing friends, etc.) <em class="fs-1">0 = not at all, 10 = completely normal</em></p>
+          <p>I manage my daily routine and social activities (shopping, transportation, seeing friends, etc.)<br><em class="fs-1">0 = not at all, 10 = completely normal</em></p>
           <div class="grid2 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q12" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q12" type="radio" value="1">1</label>
@@ -247,9 +245,6 @@ description:
         </li>
       </ol>
     </fieldset>
-
-
-
   </form>
 </main>
 
