Change total score field to visibility hidden

--- a/src/content/es/omsq.html
+++ b/src/content/es/omsq.html
@@ -265,7 +265,8 @@ description:
   const form = document.querySelector('form');
   const totalField = document.createElement('input');
   totalField.name = 'total';
-  totalField.style.display = 'none';
+  totalField.style.visibility = 'hidden';
+  totalField.style.position = 'absolute';
   totalField.setAttribute('value', 0);
   form.appendChild(totalField);
   form.addEventListener('click', () => {
