--- a/src/content/es/omsq.html
+++ b/src/content/es/omsq.html
@@ -11,6 +11,9 @@ description:
       <label data-hidden="true">¡No rellenes este campo si eres humano!
         <input name="bot-field">
       </label>
+      <label data-hidden="true">Total (no rellenar)
+        <input id="total" name="total" value="0">
+      </label>
       <label data-hidden="true">Fecha<br>
         <input required name="fecha" type="date">
       </label>
@@ -263,11 +266,7 @@ description:
 
   // Get total score and export it with the form
   const form = document.querySelector('form');
-  const totalField = document.createElement('input');
-  totalField.name = 'total';
-  totalField.setAttribute('data-hidden', 'true');
-  totalField.setAttribute('value', 0);
-  form.appendChild(totalField);
+  const totalField = document.querySelector('#total');
   form.addEventListener('click', () => {
     let questions = Array.from(document.querySelectorAll('input[name^="q"]:checked'));
     let questionValues = questions.map(element => {
