Move total score field and set to display none

--- a/src/content/es/omsq.html
+++ b/src/content/es/omsq.html
@@ -11,9 +11,6 @@ description:
       <label data-hidden="true">¡No rellenes este campo si eres humano!
         <input name="bot-field">
       </label>
-      <label data-hidden="true">Total (no rellenar)
-        <input id="total" name="total" value="0">
-      </label>
       <label data-hidden="true">Fecha<br>
         <input required name="fecha" type="date">
       </label>
@@ -251,6 +248,10 @@ description:
         </li>
       </ol>
     </fieldset>
+
+    <label style="display:none">Total (no rellenar)
+      <input id="total" name="total" value="0">
+    </label>
 
     <button class="px2 py-2 fs1 fw700" type="submit">Enviar</button>
 
