--- a/src/content/exito.html
+++ b/src/content/exito.html
@@ -5,7 +5,7 @@ permalink: /exito/
 {% extends 'base.html' %}
 {% block body %}
 <main class="cover stack jfycenter itemscenter flow1">
-  <h1 class="fs3">Gracias!</h1>
+  <h1 class="fs3">¡Gracias!</h1>
   <p>Puedes cerrar esta página.</p>
 </main>
 {% endblock %}
