--- a/src/content/home.html
+++ b/src/content/home.html
@@ -7,7 +7,5 @@ locale: en
 {% extends 'base.html' %}
 {% block body %}
 {% include 'partials/header.html' %}
-<main class="[ centerx squeeze12 ] [ p0 ]"x>
-
-</main>
+<main class="[ centerx squeeze12 ] [ p0 ]"></main>
 {% endblock %}
