Change ÖMSQ-12 email subject line

--- a/src/content/es/omsq.html
+++ b/src/content/es/omsq.html
@@ -9,11 +9,11 @@ description:
   <h1 class="centerx">ÖMSQ-12</h1>
   <form netlify netlify-honeypot="bot-field" action="/exito/" class="stack g3 itemscenter" name="omsq-12_es">
     <div class="stack g0">
-      <input type="hidden" name="subject" value="[BEVAE] Formulario rellenado: ÖMSQ-12">
       <label data-hidden="true">¡No rellenes este campo si eres humano!
         <input name="bot-field">
       </label>
       <input required name="fecha" type="date" style="display:none">
+      <input type="hidden" name="subject" value="ÖMSQ-12 rellenado">
       <label>Nombre y apellidos<br>
         <input required name="nombre" type="text">
       </label>
