--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -8,8 +8,8 @@ description: Welcome to BEVAE
 {% block body %}
 {% include 'partials/header.html' %}
 <main class="[ centerx squeeze12 ] [ p0 ]">
+  <h1>Artículos</h1>
   <ul class="flow1/3">
-    <h1 class="fs2">Articles</h1>
     {% set posts = collections[locale + "_articles"] %}
     {% for entry in posts %}
     <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle | lower }}{% endif %}</a></li>
