Run lifestyle change article through DeepL

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -7,7 +7,7 @@ description: Welcome to BEVAE
 {% extends 'base.html' %}
 {% block body %}
 {% include 'partials/header.html' %}
-<main class="[ centerx squeeze12 ] [ p0 ]">
+<main class="[ centerx squeeze12 flow1/3 ] [ p0 ]">
   <h1>Articles</h1>
   <ul class="flow1/3">
     {% set posts = collections[locale + "_articles"] %}
