--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -7,7 +7,7 @@ description: Welcome to BEVAE
 {% extends 'base.html' %}
 {% block body %}
 {% include 'partials/header.html' %}
-<main class="[ centerx squeeze12 ] [ p0 ]">
+<main class="[ centerx squeeze12 flow1/3 ] [ p0 ]">
   <h1>Artículos</h1>
   <ul class="flow1/3">
     {% set posts = collections[locale + "_articles"] %}
