Add contact email to homepage

--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -16,4 +16,6 @@ description: Welcome to BEVAE
     {% endfor %}
   </ul>
 </main>
+<p>Contacto: <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
+{% include 'partials/footer.html' %}
 {% endblock %}
