Adjust header padding

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -17,7 +17,7 @@ description: Welcome to BEVAE
       {% endfor %}
     </ul>
   </div>
-  <p>Contact: <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
+  <p>Contact me: <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
 </main>
 {% include 'partials/footer.html' %}
 {% endblock %}
