--- a/src/content/es/forms/omsq.html
+++ b/src/content/es/forms/omsq.html
@@ -1,13 +1,12 @@
 ---
 title: ÖMSQ-12
-description:
 ---
 {% extends 'base.html' %}
 {% block body %}
 {% include 'partials/header.html' %}
-<main class="[ flow1 squeeze10 centerx stack g1 ] [ px0 pt0 pb5 ]">
-  <h1 class="centerx">ÖMSQ-12</h1>
-  <form netlify netlify-honeypot="bot-field" action="/exito/" class="stack g3 itemscenter" name="omsq-12_es">
+<main class="[ flow1 squeeze11 centerx stack g1 ] [ px0 pb5 ]">
+  <h1>ÖMSQ-12</h1>
+  <form netlify netlify-honeypot="bot-field" action="/exito/" class="squeeze10 stack g3 itemscenter" name="omsq-12_es">
     <div class="stack g0">
       <label data-hidden="true">¡No rellenes este campo si eres humano!
         <input name="bot-field">
@@ -250,8 +249,6 @@ description:
     </fieldset>
 
     <input id="total" name="total" type="number" value="0" style="display:none">
-
-    <button class="px2 py-2 fs1 fw700" type="submit">Enviar</button>
 
   </form>
 </main>
