--- a/src/content/en/forms/omsq.html
+++ b/src/content/en/forms/omsq.html
@@ -1,12 +1,12 @@
 ---
 title: ÖMSQ-12
-description:
 ---
 {% extends 'base.html' %}
 {% block body %}
-<main class="[ flow1 squeeze11 centerx stack g1 ] [ px0 py5 ]">
+{% include 'partials/header.html' %}
+<main class="[ flow1 squeeze11 centerx stack g1 ] [ px0 pb5 ]">
   <h1>ÖMSQ-12</h1>
-  <form class="[ stack g3 itemscenter ] [ px0 ]">
+  <form class="stack g3 itemscenter squeeze10">
     <div class="stack g0">
       <label data-hidden="true">Date<br>
         <input type="date">
@@ -19,7 +19,7 @@ description:
       </label>
     </div>
 
-    <fieldset class="p3">
+    <fieldset>
       <legend>Tell us about your pain or problem.</legend>
       <ol class="stack g3">
         <li class="stack g-1">
@@ -39,7 +39,7 @@ description:
         </li>
         <li class="stack g-1">
           <p>Rate how much of a burden it is to perform all the things you need to do in a normal day.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q2" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q2" type="radio" value="1">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q2" type="radio" value="2">2</label>
@@ -55,7 +55,7 @@ description:
         </li>
         <li class="stack g-1">
           <p>For the last 2-3 days, rate on average how bothersome your pain or problem is.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q3" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q3" type="radio" value="1">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q3" type="radio" value="2">2</label>
@@ -71,7 +71,7 @@ description:
         </li>
         <li class="stack g-1">
           <p>For the last 2-3 days, what percentage of the day do you notice your pain or problem?<br><em class="fs-1">0 = never, 100 = all the time</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q4" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q4" type="radio" value="1">10</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q4" type="radio" value="2">20</label>
@@ -92,12 +92,12 @@ description:
 
 
 
-    <fieldset class="p3">
+    <fieldset>
       <legend>We also need a bit more information on your thoughts and feelings.</legend>
       <ol class="stack g3" start="5">
         <li class="stack g-1">
           <p>During the past 2-3 days, rate how tense or anxious you have felt.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q5" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q5" type="radio" value="1">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q5" type="radio" value="2">2</label>
@@ -113,7 +113,7 @@ description:
         </li>
         <li class="stack g-1">
           <p>During the past 2-3 days, rate how "depressed" or "down" you have felt.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q6" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q6" type="radio" value="1">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q6" type="radio" value="2">2</label>
@@ -129,7 +129,7 @@ description:
         </li>
         <li class="stack g-1">
           <p>What do you think is the risk that your current pain or problem will <span style="text-decoration: underline;">not</span> improve?<br><em class="fs-1">0 = no risk, 10 = very large risk</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q7" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q7" type="radio" value="1">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q7" type="radio" value="2">2</label>
@@ -145,7 +145,7 @@ description:
         </li>
         <li class="stack g-1">
           <p>Think of your life. Rate how satisfied you are with your current situation.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q8" type="radio" value="10">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q8" type="radio" value="9">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q8" type="radio" value="8">2</label>
@@ -166,12 +166,12 @@ description:
 
 
 
-    <fieldset class="p3">
+    <fieldset>
       <legend>How true are the next two statements for you?</legend>
       <ol class="stack g3" start="9">
         <li class="stack g-1">
           <p>Physical activity makes my pain or problem worse.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q9" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q9" type="radio" value="1">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q9" type="radio" value="2">2</label>
@@ -187,7 +187,7 @@ description:
         </li>
         <li class="stack g-1">
           <p>I should not do my normal daily routine or work with my present pain or problem.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q10" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q10" type="radio" value="1">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q10" type="radio" value="2">2</label>
@@ -208,12 +208,12 @@ description:
 
 
 
-    <fieldset class="p3">
+    <fieldset>
       <legend>Help us to better understand your current physical abilities.</legend>
       <ol class="stack g3" start="11">
         <li class="stack g-1">
           <p>I can walk for an hour or participate in my normal <span style="text-decoration: underline;">light</span> recreational or sporting activities<br><em class="fs-1">0 = not at all, 10 = completely normal</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q11" type="radio" value="10">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q11" type="radio" value="9">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q11" type="radio" value="8">2</label>
@@ -229,7 +229,7 @@ description:
         </li>
         <li class="stack g-1">
           <p>I manage my daily routine and social activities (shopping, transportation, seeing friends, etc.)<br><em class="fs-1">0 = not at all, 10 = completely normal</em></p>
-          <div class="grid2 gy-1">
+          <div class="grid1 gy-1">
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q12" type="radio" value="0">0</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q12" type="radio" value="1">1</label>
             <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q12" type="radio" value="2">2</label>
