Localize /forms/ subdir to ES-es

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -25,7 +25,7 @@ description: Welcome to BEVAE
   <section class="flow1/3">
     <h2>Forms</h2>
     <ul>
-      <li><a href="/en/oemsq-12">ÖMSQ-12</a></li>
+      <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a></li>
     </ul>
   </section>
   <section class="flow1/3">
