--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -24,7 +24,7 @@ description: Welcome to BEVAE
   <section class="flow1/3">
     <h2>Formularios</h2>
     <ul>
-      <li><a href="/es/oemsq-12">ÖMSQ-12</a></li>
+      <li><a href="/es/formularios/oemsq-12">ÖMSQ-12</a></li>
     </ul>
   </section>
   <section class="flow1/3">
