--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -7,30 +7,49 @@ description: Welcome to BEVAE
 {% extends 'base.html' %}
 {% block body %}
 {% include 'partials/header.html' %}
-<main class="[ centerx squeeze11 stack g3 ] [ px0 pb5 ]">
+<main class="[ centerx squeeze11 stack g4 ] [ px0 pb5 ]">
 
-  <section class="flow1/3">
+  <section class="sidebar gx2 gy0 itemsstart">
     <h1>Welcome</h1>
-    <p>Hey there! My name is Frederik. I live in Madrid, where I study physical therapy at CEU San Pablo University. My goal here is to develop free resources for other students, medical professionals, and curious patients. I hope you'll find the information here useful!</p>
+    <div class="main50% flow1">
+      <p>Hey there! Welcome to my personal website. I'm Frederik, a physiotherapy student at San Pablo University in Madrid, Spain. I love promoting health and helping people achieve their functional goals.</p>
+      <p>For a large number of people in society, there's one particularly unpleasant sensation and emotion which intrudes on many aspects of their life: pain.</p>
+      <p>With a focus on pain as both a symptom and a condition, my goal is to provide free resources for clinicians, patients, and other curious people, so that everyone can better understand this misunderstood and stigmatized experience.</p>
+      <p>Feel free to download and redistribute my content.</p>
+      <p><i>Disclaimer: This website is for educational purposes only. I am not providing personalized medical advice, and I take no responsibility for what you do with the information presented.</i></p>
+    </div>
+    <div class="[ image ] [ frame1:1 squeeze7 side7 ]">
+      <img src="/assets/img/profile_hi-res.jpg"
+      srcset="/assets/img/profile_hi-res.jpg 3x,
+      /assets/img/profile_me-res.jpg 2x,
+      /assets/img/profile_lo-res.jpg 1x"
+      alt="Frederik smiling at the camera">
+    </div>
   </section>
   <section class="flow1/3">
     <h2>Articles</h2>
     <ul class="flow1/3">
       {% set posts = collections[locale + "_articles"] %}
       {% for entry in posts %}
-      <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle | lower }}{% endif %}</a></li>
+      <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle | lower }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description | lower }}{%endif %}</li>
       {% endfor %}
     </ul>
   </section>
   <section class="flow1/3">
     <h2>Forms</h2>
     <ul>
-      <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a></li>
+      <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a> - a general screening questionnaire for musculoskeletal complaints</li>
     </ul>
   </section>
   <section class="flow1/3">
-      <h2>Contact</h2>
-      <p><a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
+    <h2>Presentations</h2>
+    <ul>
+      <li>Nothing here yet!</li>
+    </ul>
+  </section>
+  <section class="flow1/3">
+    <h2>Get in touch</h2>
+    <p><a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
   </section>
 </main>
 {% include 'partials/footer.html' %}
