Fix homepage typo

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -23,7 +23,7 @@ description: Welcome to BEVAE
         <p>Hey there! Welcome to my personal website. I'm Frederik, a physiotherapy student at San Pablo University in Madrid, Spain. I love promoting health and helping people achieve their functional goals.</p>
         <p>For a large number of people in society, there's one particularly unpleasant sensation and emotion which intrudes on many aspects of their life: pain.</p>
         <p>With a focus on pain as both a symptom and a condition, my goal here is to develop free learning resources for clinicians, their patients, and other curious people. I want to make it easy for everyone to make sense of this common yet misunderstood (and stigmatized) aspect of human existence.</p>
-        <p>Feel free to download and redistribute my content! Keep in mind that I will update be continually updating the website as my views and ambitions evolve, so be sure to check back periodically.</p>
+        <p>Feel free to download and redistribute my content! Keep in mind that I will be continually updating the website as my views and ambitions evolve, so be sure to check back periodically.</p>
         <p><i>Disclaimer: This website is for educational purposes only. I am not providing personalized medical advice, and I take no responsibility for what you do with the information presented.</i></p>
       </div>
     </div>
