--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -46,13 +46,13 @@ description: Welcome to BEVAE
         </ul>
       </section>
     </section>
-    <section class="flow1/3">
+    <section class="flow1">
       <h2>For patients</h2>
       <ul>
         <li><i>Stay tuned! ♫</i></li>
       </ul>
     </section>
-    <section class="flow1/3">
+    <section class="flow1">
       <h2>Get in touch</h2>
       <p><a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
     </section>
