--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -10,7 +10,7 @@ description: Welcome to BEVAE
 <main>
   <div class="stack g4 centerx squeeze11">
     <section class="stack g1">
-      <h1>Welcome to BEVAE</h1>
+      <h1>Welcome</h1>
       <div class="sidebar gx2 gy0 rowreverse jfyend itemsstart">
         <div class="[ image ] [ frame1:1 squeeze7 side7 ]">
           <img src="/assets/img/profile_hi-res.jpg"
@@ -23,7 +23,7 @@ description: Welcome to BEVAE
           <p>Hey there! I'm Frederik, a physiotherapy student at San Pablo University in Madrid, Spain. I love promoting health and helping people achieve their functional goals.</p>
           <p>For a large number of people in society, there's a very personal, often unpleasant sensation and emotion which intrudes on many aspects of their life: pain.</p>
           <p>With a focus on pain as both a symptom and a condition, my goal here is to develop a variety of free resources for clinicians, patients, and other curious people. I want to make it easy for everyone to make sense of this common yet misunderstood (and stigmatized) experience.</p>
-          <p>Feel free to download and redistribute my content! Just keep in mind that I will be continually updating the website and its contents as my views and ambitions evolve.</p>
+          <p>Feel free to download and redistribute my content! Just keep in mind that I will be continually updating the website as my views and ambitions evolve.</p>
           <p><i>DISCLAIMER: This website is for educational purposes only. I am not providing personalized medical advice and I take no responsibility for what you do with the information presented.</i></p>
         </div>
       </div>
@@ -42,7 +42,7 @@ description: Welcome to BEVAE
       <section class="flow1/3">
         <h3>Forms</h3>
         <ul>
-          <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a> - a practical screening questionnaire for musculoskeletal complaints, adapted from <i>Gabel et al., 2013.</i></li>
+          <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a> - a practical screening questionnaire for musculoskeletal complaints, adapted from <i>Gabel et al. 2013.</i></li>
         </ul>
       </section>
     </section>
@@ -51,10 +51,6 @@ description: Welcome to BEVAE
       <ul>
         <li><i>Stay tuned! ♫</i></li>
       </ul>
-    </section>
-    <section class="flow1">
-      <h2>Get in touch</h2>
-      <p><a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
     </section>
   </div>
 </main>
